--- a/4_10.md
+++ b/4_10.md
@@ -4,3 +4,13 @@ int temp = data[j];
 data[j] = data[j + 1];
 data[j + 1] = temp;
 '''java
+
+Class: 
+-template
+-properties or behaviors of that specific class
+-member mthods relating to class
+
+
+Object:
+-Concrete object
+
