--- a/4_24.md
+++ b/4_24.md
@@ -1,3 +1,13 @@
 java is always pass by "value"
 
 object name is considered an address for the object. it is also considered a reference value to the object.
+
+complexity is the use of resources really. Complexity is running everything in the least amount of CPU, passes, storage, etc.
+
+Big O notation determines how much resources you used.
+"O" reads as "order of".
+Speed increases as n grows.
+
+Memory copy is a very slow in speed.
+
+High performance Computing relies on the CPU speed and using the big projects and running them as fast as possible.
